# netabase

./: .gitignore  CONFIG_REFACTORING.md  CROSS_MACHINE_TESTING.md  Cargo.toml  ERROR_HANDLING.md  EXPANSION_INSTRUCTIONS.md  IMPLEMENTATION_SUMMARY.md  KADEMLIA_HANDLER_REFACTOR.md  KEYS_FUNCTION_FIXES.md  KEY_GENERATION.md  KEY_VALIDATION_SUMMARY.md  MULTI_RECORD_TESTING.md  NETABASE_ARCHITECTURE.md  README.md  README_DERIVE_MACRO.md  REVERSE_FROM_IMPLEMENTATIONS.md  SCALABILITY_TESTING.md  TRAIT_IMPLEMENTATIONS.md  debug_records.sh  less  log.txt  test_compile.rs  test_key_fix.rs  test_mdns.sh  test_minimal.rs  test_ports.sh
.obsidian/: workspace.json
docs/: IMPLEMENTATION_GUIDE.md
examples/: complete_example.rs  distributed_news_network.rs  from_implementations_example.rs  mdns_auto_connect.rs  schema_traits_example.rs  simple_schema_test.rs  store_configuration.rs  test_composite_keys.rs  test_macro_features.rs  test_macro_only.rs  test_runner.rs  test_sled.rs  test_unsupported_keys.rs  validate_all_key_types.rs  validate_docs_basic.rs  validate_supported_keys.rs  validate_working_patterns.rs
macro_exports/: Cargo.toml
macro_exports/src/: lib.rs
netabase_macros/: Cargo.toml  README.md  SEALED_TRAITS_IMPLEMENTATION.md
netabase_macros/examples/: error_handling_demo.rs  field_key_generator_example.rs  native_bincode_vs_serde.rs  sealed_trait_test.rs
netabase_macros/src/: example_usage.rs  lib.rs  visitors.rs
netabase_macros/src/generators/: from_traits.rs  from_traits2.rs  generate_netabase_impl.rs  generation_error.rs  key_struct.rs  mod.rs  schema_enum_generator.rs  trait_impls.rs
netabase_macros/src/visitors/: errors.rs  key_finder.rs  key_generation.rs  key_validator.rs  mod.rs  schema.rs  schema_counter.rs  schema_finder.rs  schema_validator.rs  utils.rs  validation.rs  validation_error.rs
netabase_macros/tests/: native_bincode_test.rs  simple_test.rs
netabase_test_connection2/: db
scripts/: run_local.sh  run_multi_local_test.sh  run_multi_reader.sh  run_multi_writer.sh  run_reader.sh  run_scalability_tests.sh  run_writer.sh  test_mdns.sh  validate_scalability_setup.sh
src/: config.rs  lib.rs  main.rs  netabase_trait.rs
src/config/: behaviour.rs  mod.rs  swarm.rs
src/config/database/: mod.rs  wrappers.rs
src/config/swarm/: mod.rs  swarm_action.rs
src/database/: mod.rs  scratch.rs  wrappers.rs
src/database_api/: commands.rs  database_functions.rs  mod.rs  netabase.rs
src/gdelt_operations/: event.rs  mentions.rs  mod.rs
src/network/: behaviour.rs  mod.rs  swarm.rs
src/network/commands/: database_commands.rs  mod.rs
src/network/event_handlers/: command_events.rs  mod.rs
src/network/event_handlers/behaviour_events/: identify_events.rs  kad_events.rs  mdns_events.rs  mod.rs
src/network/event_loop/: mod.rs
src/network/event_loop/handle_behaviour_events/: handle_identify_events.rs  handle_kad_events.rs  handle_mdns_events.rs  mod.rs
src/network/event_loop/handle_commands/: configuration_commands.rs  database_commands.rs  mod.rs  network_commands.rs  (+1 more)
src/network/event_messages/: command_messages.rs  mod.rs  swarm_messages.rs
src/swarm/: mod.rs  swarm_config.rs
src/swarm/handlers/: action_events.rs  libp2p_events.rs  mod.rs
src/swarm/messages/: mod.rs  swarm_actions.rs
src/traits/: DHT_MODE_CONFIGURATION.md  KAD_INTEGRATION.md  MEMORY_STORE_INTEGRATION.md  README.md  configuration.rs  core.rs  database.rs  example.rs  mod.rs  network.rs
test/database1/: db  snap.0000000000000140  snap.000000000000018D
test/database2/: db  snap.00000000000002C1  snap.000000000000030E
test_macros/: Cargo.toml  EXPANSION_SUMMARY.md  GENERIC_TYPES.md  README.md
test_macros/src/: lib.rs  main.rs
test_validation/: Cargo.toml
test_validation/src/: invalid_tests.rs  lib.rs  minimal_test.rs  simple_tests.rs
tests/: README.md  database_persistence.rs  deterministic_paths.rs  distributed_tests.rs  integration_test.rs  key_generation_test.rs  lib.rs  logging_test.rs  network_cross_machine.rs  network_cross_machine_multi.rs  network_integration.rs  network_kad.rs  network_scalability.rs  simple_refactor_test.rs  store_config_test.rs  swarm.rs  test_refactored_keys.rs
tests/nodes/: EVENT_HANDLING_FIXES.md  discovery.rs
tmpcross_writer_1594200497/: db
tmpcross_writer_1816324821/: db
tmpcross_writer_2310427638/: db
tmpcross_writer_913742279/: db
tmpscalability_node_0_1897224634/: db
tmpwriter_1322584774/: db
tmpwriter_2880112617/: db
