[package]
name = "netabase"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["netabase_macros", "test_macros"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "*"
netabase_macros = { path = "netabase_macros" }
bincode = { version = "*", features = ["serde"] }
clap = { version = "4.4", features = ["derive", "env"] }
env_logger = "*"
envy = "*"
libp2p = { version = "*", features = [
    "identify",
    "kad",
    "metrics",
    "quic",
    "macros",
    "tokio"
] }
log = "*"
rand = "*"
serde = { version = "*", features = ["derive"] }
sled = "*"
smallvec = { version = "*", features = ["bincode", "impl_bincode"] }
tokio = { version = "*", features = ["full"] }
derive_builder = "*"
