[package]
name = "netabase"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "*"
netabase_macros = { path = "netabase_macros" }
bincode = "2.0.0-rc.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive", "env"] }
env_logger = "*"
envy = "*"
libp2p = { version = "*", features = [
    "identify",
    "kad",
    "metrics",
    "quic",
    "macros",
    "tokio",
    "tcp",
    "mdns",
    "tls",
    "yamux",
    "noise",
    "dns",
] }
log = "*"
rand = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
sled = "*"
smallvec = { version = "*", features = ["bincode", "impl_bincode"] }
tokio = { version = "*", features = ["full"] }
derive_builder = "*"
tracing = "0.1.41"
