[package]
name = "netabase_macros"
version = "0.1.0"
edition = "2024"

[lib]
name = "netabase_macros"
crate-type = ["proc-macro"]
proc-macros = true

[dependencies]
proc-macro2 = { version = "1.0.95", features = ["nightly", "span-locations"] }
quote = "1.0.40"
syn = { version = "2.0.104", features = ["clone-impls", "extra-traits", "full", "parsing", "visit"] }
