[package]
name = "netabase_macros"
version = "0.1.0"
edition = "2024"

[lib]
name = "netabase_macros"
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.95", features = ["nightly", "span-locations"] }
quote = "1.0.40"
syn = { version = "2.0.104", features = ["clone-impls", "extra-traits", "full", "parsing", "printing", "test", "visit"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.98"

[dev-dependencies]
serde_json = "1.0"
bincode = "2.0.0-rc.3"
libp2p = { version = "0.53", features = ["kad"] }
serde = { version = "1.0", features = ["derive"] }
