[package]
name = "netabase_macros"
version = "0.0.0"
authors = ["nzuma"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2024"

[lib]
proc-macro = true

[dependencies]
quote = "*"
proc-macro2 = "*"
syn = { version = "*", features = ["full", "visit", "derive"]}
