[package]
name = "test_macros"
version = "0.1.0"
edition = "2024"

[dependencies]
netabase_macros = {path = "../netabase_macros"}
netabase = {path = "../"}
bincode = { version = "*", features = ["derive"] }
macro_exports = { version = "0.1.0", path = "../macro_exports" }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["full"] }
derive_more = { version = "2.0.1", features = ["try_into"] }
